# plumbline

./: .gitignore  LICENSE  README.md  SECURITY.md  plumbline.yaml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: plumbline.yml  self-update.yml
.plumbline/: report.json  report.md
adapters/anatomy/: ROADMAP.md  mapping.example.yaml  plumbline_to_anatomy.py  sample-output.catalog.gov.json
docs/: AI_GUARDRAILS.md  DECISIONS.md  ROADMAP.md  THREAT_MODEL.md
examples/: cloudintelmatrix.plumbline.yaml
plumbline/: cli.py  config.py
plumbline/gates/: base.py  builtin.py  iac_gates.py
plumbline/llm/: reviewer.py
plumbline/templates/: plumbline.yaml
plumbline/templates/docs/: DECISIONS.md  EVALS.md  ROADMAP.md  THREAT_MODEL.md
tests/: test_gates.py
