[project]
name = "plumbline"
version = "0.2.0"
description = "Deterministic-first project governance harness. The enforcement arm of Architect's Cornerstone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
scanners = ["zizmor>=1.0", "pip-audit>=2.7", "ruff>=0.6", "jsonschema>=4.21"]
llm = ["anthropic>=0.116.0"]
dev = ["pytest>=9.1.1"]

[project.scripts]
plumbline = "plumbline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plumbline"]

[tool.ruff]
line-length = 100
